--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "joi": "^17.10.1",
     "mongoose": "^7.5.1",
     "nodemon": "^3.0.1"
   }
