--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "nodemon": "^3.0.1",
+    "redis": "^4.6.8",
+    "redis-commander": "^0.8.0",
     "start": "^5.1.0"
   }
 }
